--- a/app/code/MW/FreeGift/view/adminhtml/templates/report/dashboard.phtml
+++ b/app/code/MW/FreeGift/view/adminhtml/templates/report/dashboard.phtml
@@ -115,7 +115,7 @@ require([
     "prototype"
 ], function(){
     document.observe("dom:loaded", function() {
-        window.mwReport = new MW.FreeGift.Report.Dashboard({url: '<?php echo $this->getUrl('mw_freegift/report_dashboard/dashboard')?>'});
+        window.mwReport = new MW.FreeGift.Report.Dashboard({url: '<?php echo $block->getUrl('mw_freegift/report_dashboard/dashboard')?>'});
     });
 });
 </script>
