--- a/app/code/MW/FreeGift/view/frontend/layout/catalog_category_view.xml
+++ b/app/code/MW/FreeGift/view/frontend/layout/catalog_category_view.xml
@@ -7,9 +7,9 @@
         <link src="MW_FreeGift::js/mw_freegift_js.js"/>
     </head>
     <body>
-        <referenceBlock name="head.additional">
-            <block class="MW\FreeGift\Block\Checkout\Top" name="onestepcheckout.head" template="MW_FreeGift::top.phtml" ifconfig="mw_freegift/group_general/active"  />
-        </referenceBlock>
+        <!--<referenceBlock name="head.additional">-->
+            <!--<block class="MW\FreeGift\Block\Checkout\Top" name="onestepcheckout.head" template="MW_FreeGift::top.phtml" ifconfig="mw_freegift/group_general/active"  />-->
+        <!--</referenceBlock>-->
         <referenceBlock name="category.products.list">
             <action method="setTemplate">
                 <argument name="template" xsi:type="string">MW_FreeGift::product/list.phtml</argument>
