--- a/app/code/MW/FreeGift/view/frontend/templates/catalog_product_view_gift.phtml
+++ b/app/code/MW/FreeGift/view/frontend/templates/catalog_product_view_gift.phtml
@@ -5,7 +5,7 @@
  */
 
 $ProductGiftData = $block->getFreeGiftCatalog();
-if(count($ProductGiftData) > 0):
+if (!empty($ProductGiftData)) :
     ?>
 
     <script type="text/javascript">
@@ -20,26 +20,26 @@ if(count($ProductGiftData) > 0):
 
             <div class="freegift_catalog_container clearer control">
                 <ul id="freegift">
-                    <?php foreach($ProductGiftData as $giftData):
-                        if($giftData['gift_id'] != ""):
+                    <?php foreach ($ProductGiftData as $giftData) :
+                        if ($giftData['gift_id'] != "") :
                             $product = $block->getProductGiftData($giftData['gift_id']);
-                            if($product->isSaleable()) :
+                            if ($product->isSaleable()) :
                                 ?>
                                 <li class="mw-fg-items">
-                                    <a id="stay-target-<?php echo $giftData['rule_id'].'_'.$block->getCurrentProduct()->getId().'_'.$giftData['gift_id']; ?>" href="<?php echo $product->getProductUrl(); ?>" title="<?php echo $block->escapeHtml($product->getName()); ?>" class="product-image">
-                                        <img src="<?php echo $this->helper('Magento\Catalog\Helper\Image')->init($product, 'category_page_list')->constrainOnly(TRUE)->keepAspectRatio(TRUE)->keepFrame(TRUE)->resize(75,75)->getUrl(); ?>" alt="" height="75" width="75">
+                                    <a id="stay-target-<?php /* @noEscape */ echo $giftData['rule_id'].'_'.$block->getCurrentProduct()->getId().'_'.$giftData['gift_id']; ?>" href="<?php /* @noEscape */ echo $product->getProductUrl(); ?>" title="<?php /* @noEscape */ echo $block->escapeHtml($product->getName()); ?>" class="product-image">
+                                        <img src="<?php /* @noEscape */ echo $this->helper('Magento\Catalog\Helper\Image')->init($product, 'category_page_list')->constrainOnly(true)->keepAspectRatio(true)->keepFrame(true)->resize(75, 75)->getUrl(); ?>" alt="" height="75" width="75">
                                     </a>
-                                    <div style="display: none;" id="stay-content-<?php echo $giftData['rule_id'].'_'.$block->getCurrentProduct()->getId().'_'.$giftData['gift_id']; ?>" class="mw-fg-item">
+                                    <div style="display: none;" id="stay-content-<?php /* @noEscape */ echo $giftData['rule_id'].'_'.$block->getCurrentProduct()->getId().'_'.$giftData['gift_id']; ?>" class="mw-fg-item">
                                         <div class="mw-fg-item-options">
-                                            <div class="mw-fg-item-option-title"><?php echo $giftData['name'] ?></div>
+                                            <div class="mw-fg-item-option-title"><?php /* @noEscape */ echo $giftData['name'] ?></div>
                                             <div class="mw-fg-item-option-ct">
                                                 <p class="mw-fg-image-item">
-                                                    <a href="<?php echo $product->getProductUrl(); ?>" title="<?php echo $block->escapeHtml($product->getName()); ?>">
-                                                        <img src="<?php echo $this->helper('Magento\Catalog\Helper\Image')->init($product, 'category_page_list')->constrainOnly(TRUE)->keepAspectRatio(TRUE)->keepFrame(TRUE)->resize(135,150)->getUrl(); ?>" alt="" height="135" width="150">
+                                                    <a href="<?php /* @noEscape */ echo $product->getProductUrl(); ?>" title="<?php /* @noEscape */ echo $block->escapeHtml($product->getName()); ?>">
+                                                        <img src="<?php /* @noEscape */ echo $this->helper('Magento\Catalog\Helper\Image')->init($product, 'category_page_list')->constrainOnly(true)->keepAspectRatio(true)->keepFrame(true)->resize(135, 150)->getUrl(); ?>" alt="" height="135" width="150">
                                                     </a>
                                                 </p>
                                                 <p class="mw-fg-item-name">
-                                                    <a href="<?php echo $product->getProductUrl(); ?>" title="<?php echo $block->escapeHtml($product->getName()); ?>"><?php echo $block->escapeHtml($product->getName()); ?></a>
+                                                    <a href="<?php /* @noEscape */ echo $product->getProductUrl(); ?>" title="<?php /* @noEscape */ echo $block->escapeHtml($product->getName()); ?>"><?php /* @noEscape */ echo $block->escapeHtml($product->getName()); ?></a>
                                                 </p>
                                             </div>
                                         </div>
