--- a/app/code/MW/FreeGift/view/frontend/templates/checkout/cart/promotion_banner.phtml
+++ b/app/code/MW/FreeGift/view/frontend/templates/checkout/cart/promotion_banner.phtml
@@ -2,41 +2,37 @@
 </div>
 <?php
 $allActiveRules = $block->getAllActiveRules();
-//        \Zend_Debug::dump(count($allActiveRules));
-//        \Zend_Debug::dump(sizeof($allActiveRules));
-//die("KK");
-if(sizeof($allActiveRules)):?>
+if (count($allActiveRules)) :?>
     <?php
-    $arrShowin = array(1,3);
+    $arrShowin = [1,3];
     $showin = $this->helper('MW\FreeGift\Helper\Data')->getStoreConfig('mw_freegift/group_general/showfreegiftpromotion');
     $sizePromotionBanner = $this->helper('MW\FreeGift\Helper\Data')->getStoreConfig('mw_freegift/group_general/sizepromotionbanner');  //Mage::getStoreConfig('freegift/config/sizepromotionbanner');
     $height = 120;
     $width = 900;
-    if($sizePromotionBanner != ""){
-        $arr = explode("x",$sizePromotionBanner);
+    if ($sizePromotionBanner != "") {
+        $arr = explode("x", $sizePromotionBanner);
         $height = $arr[0];
         $width = $arr[1];
     }
     ?>
-
     <div class="freegift_rules_banner_container">
         <?php
-        if(in_array($showin,$arrShowin)){
-            $listBanner = array();
-            foreach($allActiveRules as $rule):
-                if($rule->getData('promotion_banner') != ""){
+        if (in_array($showin, $arrShowin)) {
+            $listBanner = [];
+            foreach ($allActiveRules as $rule) :
+                if ($rule->getData('promotion_banner') != "") {
                     $listBanner[] = $rule->getData('promotion_banner');
                 }
             endforeach;
-            if(count($listBanner)>0){
+            if (!empty($listBanner)) {
                 ?>
                 <script type="text/javascript">
                     hasPromotionBanner = true;
                 </script>
                 <div id="promotion_banner" class="mw_jcarousel" style="height: 400px;">
                     <ul>
-                        <?php foreach($listBanner as $banner): //\Zend_Debug::dump($banner); die("fffddd"); ?>
-                            <li><img src="<?php echo $this->resizeImg($banner,$width,$height,'');?>" alt=""></li>
+                        <?php foreach ($listBanner as $banner) : //\Zend_Debug::dump($banner); die("fffddd"); ?>
+                            <li><img src="<?php echo $this->resizeImg($banner, $width, $height, '');?>" alt=""></li>
                         <?php endforeach; ?>
                     </ul>
                 </div>
