--- a/app/code/MW/FreeGift/view/frontend/templates/freegift_image.phtml
+++ b/app/code/MW/FreeGift/view/frontend/templates/freegift_image.phtml
@@ -1,6 +1,6 @@
 <?php
 $ProductGiftData = $block->getFreeGiftCatalog();
-if(count($ProductGiftData) > 0):
+if (!empty($ProductGiftData)) :
 ?>
 <img src="<?php echo $this->getViewFileUrl('MW_FreeGift::images/freegift_50.png')?>" alt="" class="label-freegift">
 <?php endif; ?>
