--- a/app/code/MW/FreeGift/view/frontend/layout/checkout_index_index.xml
+++ b/app/code/MW/FreeGift/view/frontend/layout/checkout_index_index.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="checkout" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
         <css src="MW_FreeGift::css/skin.css"/>
         <link src="MW_FreeGift::js/mw_freegift_js.js"/>
@@ -7,8 +7,7 @@
 
     <body>
         <referenceContainer name="content">
-            <remove name="top.search"/>
-            <block class="MW\FreeGift\Block\Quote" name="cart.freegift.quote" cacheable="false" template="MW_FreeGift::checkout/cart/quote_on_checkout.phtml"   before="-" />
+            <block class="MW\FreeGift\Block\Quote" name="cart.freegift.quote" cacheable="false" template="MW_FreeGift::checkout/cart/quote_on_checkout.phtml" before="-" />
         </referenceContainer>
     </body>
 </page>
